@@ -1,5 +1,0 @@
-# leaderboard
-
-# submit pid
-
-# leaderboard position
